[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mwa-tab-gridder"
dynamic = ["version"]
readme = "README.md"
description = "A package to help calculating grid positions for tied-array beam tiling with the MWA."
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
authors = [
  { name = "Bradley Meyers", email = "bradley.meyers1993@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10"
dependencies = [
  "astropy",
  "matplotlib",
  "scipy",
  "mwalib",
  "numpy",
]

[project.scripts]
mwa-tab-grid = "gridtools:mwa_gridder_cli"

[project.urls]
Repository = "https://github.com/bwmeyers/mwa-tab-gridder.git"
Issues = "https://github.com/bwmeyers/mwa-tab-gridder/issues"